--- a/anoneko-adopt-front/package.json
+++ b/anoneko-adopt-front/package.json
@@ -38,5 +38,9 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"axios": "^1.6.5",
+		"theme-change": "^2.5.0"
+	}
 }
