--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -48,7 +48,7 @@ jobs:
         with:
           context: "{{defaultContext}}:anoneko-adopt-api"
           file: "docker/dev/Dockerfile"
-          tags: ${{ steps.meta.outputs.tags }}:dev
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
