--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -48,6 +48,7 @@ jobs:
         with:
           context: "{{defaultContext}}:anoneko-adopt-api"
           file: "docker/dev/Dockerfile"
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
