ci: trigger this action if any file is changed in the api directory
Signed-off-by: sudipto baral <sudiptobaral.me@gmail.com>

--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -3,8 +3,8 @@ name: API dev
 on:
   push:
     branches: [ "develop" ]
-#    paths:
-#      - 'anoneko-adopt-api/**'
+    paths:
+      - 'anoneko-adopt-api/**'
 
 env:
   IMAGE_NAME: ${{ github.repository }}
