--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -23,6 +23,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Create .env file
+        run: cp .env.example .env
+
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
 
