ci: api deployed on dev kubernetes cluster, manifests created [#19]
Signed-off-by: sudipto baral <sudiptobaral.me@gmail.com>

--- a/anoneko-adopt-api/kube/dev/deployment.yaml
+++ b/anoneko-adopt-api/kube/dev/deployment.yaml
@@ -17,5 +17,6 @@ spec:
       containers:
         - name: anoneko-adopt-api
           image: sudiptob2/anoneko-adopt:develop
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
