ci: test netlify [#33]
Signed-off-by: sudipto baral <sudiptobaral.me@gmail.com>

--- a/anoneko-adopt-front/netlify.toml
+++ b/anoneko-adopt-front/netlify.toml
@@ -1,5 +1,5 @@
 [build]
 	ignore = "bash /anoneko-adopt-front/netlify_build_ignore.sh"
 	command = "npm run build"
-	publish = "build"
+	publish = "test"
 
