--- a/anoneko-adopt-front/netlify.toml
+++ b/anoneko-adopt-front/netlify.toml
@@ -1,5 +1,5 @@
 [build]
 	ignore = "bash /anoneko-adopt-front/netlify_build_ignore.sh"
-	command = "npm run build"
+	command = "npm run test"
 	publish = "test"
 
