--- a/anoneko-adopt-front/netlify.toml
+++ b/anoneko-adopt-front/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-ignore = "git diff $CACHED_COMMIT_REF $COMMIT_REF anoneko-adopt-front; test $? -eq 1"
+base = "anoneko-adopt-front/"
+ignore = "echo 'Running ignore command...'; git diff $CACHED_COMMIT_REF $COMMIT_REF anoneko-adopt-front; echo 'Git diff exit code: $?'; test $? -eq 1"
 command = "npm run build"
 publish = "build"
 
