ci: netlify should not build this [#33] (#35)
Ignore Netlify deploy and deploy preview if no changes are made in the frontend directory.

---------

Signed-off-by: sudipto baral <sudiptobaral.me@gmail.com>

--- a/anoneko-adopt-front/netlify.toml
+++ b/anoneko-adopt-front/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-	ignore = "bash /anoneko-adopt-front/netlify_build_ignore.sh"
-	command = "npm run build"
-	publish = "build"
+base = "anoneko-adopt-front/"
+ignore = "bash netlify_build_ignore.sh"
+command = "npm run build"
+publish = "build"
 
