--- a/anoneko-adopt-api/chart/templates/ingress.yaml
+++ b/anoneko-adopt-api/chart/templates/ingress.yaml
@@ -12,7 +12,7 @@ spec:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
-          - path: /
+          - path: /api
             pathType: Prefix
             backend:
               service:
