--- a/anoneko-adopt-api/chart/values.yaml
+++ b/anoneko-adopt-api/chart/values.yaml
@@ -17,7 +17,7 @@ ingress:
   name: anoneko-tls-ingress
   host: '"dev.anoneko.sudiptobaral.com"'
   tlsHost: anoneko.sudiptobaral.com
-  secretName: anoneko.sudiptobaral.com-tls
+  secretName: anoneko-api-tls
   annotations:
     clusterIssuer: letsencrypt-production
     ingressClass: traefik
