ci: updated helm chart
Signed-off-by: sudipto baral <sudiptobaral.me@gmail.com>

--- a/anoneko-adopt-api/chart/values.yaml
+++ b/anoneko-adopt-api/chart/values.yaml
@@ -19,5 +19,5 @@ ingress:
   tlsHost: anoneko.sudiptobaral.com
   secretName: anoneko-api-tls
   annotations:
-    clusterIssuer: letsencrypt-production
+    clusterIssuer: letsencrypt-staging
     ingressClass: traefik
