ci: helm chart update workflow added
Signed-off-by: sudipto baral <sudiptobaral.me@gmail.com>

--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -57,3 +57,36 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Update tag in values.yaml
+        uses: mikefarah/yq@v4.12.2
+        with:
+          cmd: yq eval '.image.tag = "${{ steps.build-and-push.outputs.digest }}"' -i anoneko-adopt-api/chart/values.yaml
+
+      - name: Setup Git
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+
+      - name: Create new branch
+        run: |
+          git checkout -b update-values-${{ github.run_id }}
+
+      - name: Commit and push changes
+        run: |
+          git add anoneko-adopt-api/chart/values.yaml
+          git commit -m "Update image tag in values.yaml"
+          git push origin update-values-${{ github.run_id }}
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          title: "Update image tag in values.yaml for ArgoCD deployment"
+          body: "This PR updates the image tag in `values.yaml`."
+          branch: update-values-${{ github.run_id }}
