ci: this should trigger buld and deploy
Signed-off-by: sudipto baral <sudiptobaral.me@gmail.com>

--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -90,3 +90,4 @@ jobs:
           title: "Update image tag in values.yaml for ArgoCD deployment"
           body: "This PR updates the image tag in `values.yaml`."
           branch: update-values-${{ github.run_id }}
+          base: main
