--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -2,7 +2,7 @@ name: API dev
 
 on:
   push:
-#    branches: [ "main" ]
+    branches: [ "main" ]
 #    paths:
 #      - 'anoneko-adopt-api/**'
 
@@ -57,6 +57,10 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Print and debug digest
+        run: |
+          echo ${{ steps.build-and-push.outputs.digest }}
   deploy:
     needs: build
     runs-on: ubuntu-latest
