--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -68,33 +68,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Print and debug digest
+      - name: Print and debug digest-deploy
         run: |
           echo ${{ steps.build-and-push.outputs.digest }}
+
       - name: Update tag in values.yaml
         uses: mikefarah/yq@v4.12.2
         with:
           cmd: yq eval '.image.tag = "${{ steps.build-and-push.outputs.digest }}"' -i anoneko-adopt-api/chart/values.yaml
 
-      - name: Setup Git
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-
-      - name: Create new branch
-        run: |
-          git checkout -b update-values-${{ github.run_id }}
-
-      - name: Commit and push changes
-        run: |
-          git add anoneko-adopt-api/chart/values.yaml
-          git commit -m "Update image tag in values.yaml"
-          git push origin update-values-${{ github.run_id }}
-
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
+          committer: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
+          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+          signoff: true
           title: "Update image tag in values.yaml for ArgoCD deployment"
           body: "This PR updates the image tag in `values.yaml`."
-          branch: update-values-${{ github.run_id }}
+          branch: helm/update-docker-image-tag
           base: main
