ci: experiment github action
Signed-off-by: sudipto baral <sudiptobaral.me@gmail.com>

--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -61,6 +61,11 @@ jobs:
       - name: Print and debug digest
         run: |
           echo ${{ steps.build-and-push.outputs.digest }}
+
+    outputs:
+        digest: ${{ steps.build-and-push.outputs.digest }}
+
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
