--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -60,10 +60,10 @@ jobs:
 
       - name: Set output
         id: set-output
-        run: echo "image-tags=${{ steps.meta.outputs.tags }}" >> $GITHUB_OUTPUT
+        run: echo "image-tag=${{ steps.meta.outputs.tags[1] }}" >> $GITHUB_OUTPUT
 
     outputs:
-      image-tags: ${{ steps.meta.outputs.tags }}
+      image-tag: ${{ steps.set-output.outputs.image-tag }}
 
 
 
