ci: experiment github action
Signed-off-by: sudipto baral <sudiptobaral.me@gmail.com>

--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Set output
         id: set-output
-        run: echo "image-tag=${{ steps.meta.outputs.tags[1] }}" >> $GITHUB_OUTPUT
+        run: echo "image-tag=$DOCKER_METADATA_OUTPUT_JSON >> $GITHUB_OUTPUT
 
     outputs:
       image-tag: ${{ steps.set-output.outputs.image-tag }}
