--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -66,7 +66,8 @@ jobs:
         run: |
           echo $DOCKER_METADATA | jq '.'
           image_tag=$(echo "$DOCKER_METADATA" | jq -r '.tags[] | select(. | test("main-"))')
-          echo $image_tag
+          image_tag_sha=$(echo "$image_tag" | grep -o 'main-[a-f0-9]\+')
+          echo $image_tag_sha
           echo "image_tag=$image_tag" >> $GITHUB_ENV
 
     outputs:
