--- a/.github/workflows/api-dev-workflow.yaml
+++ b/.github/workflows/api-dev-workflow.yaml
@@ -68,7 +68,7 @@ jobs:
           image_tag=$(echo "$DOCKER_METADATA" | jq -r '.tags[] | select(. | test("main-"))')
           image_tag_sha=$(echo "$image_tag" | grep -o 'main-[a-f0-9]\+')
           echo $image_tag_sha
-          echo "image_tag=$image_tag_sha" >> $GITHUB_OUTPUT
+          echo "image_tag=$image_tag_sha" >> $env:GITHUB_OUTPUT
 
       - name: Echo output
         run: echo  ${{ steps.set-output.outputs.image-tag }}
